Add profiler dependencies.